{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "PlayerActionMap",
            "id": "8ed2f13a-0226-4945-9d8c-4c5ccdc0a12b",
            "actions": [
                {
                    "name": "Walk",
                    "type": "Button",
                    "id": "2e985255-9129-44db-bab8-3d048113f969",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LookAround",
                    "type": "Button",
                    "id": "80b412ae-51a0-4226-86d0-b78021affd7c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AttachDetachEye",
                    "type": "Button",
                    "id": "2148d957-f280-4af6-9700-8dd63c77552b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseEye",
                    "type": "Button",
                    "id": "8e01304e-0d55-4cc4-a55d-3e0faf3ebcc7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AttachDetachLeftArm",
                    "type": "Button",
                    "id": "4f1fde25-514c-42f8-9b03-9246eb668697",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseLeftArm",
                    "type": "Button",
                    "id": "ec3774a5-081f-46c3-96de-ad01748f0493",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AttachDetachRightArm",
                    "type": "Button",
                    "id": "454d4df6-8e5e-49b0-8cba-22ca687fe330",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseRightArm",
                    "type": "Button",
                    "id": "97dc0da5-4ac9-4ac7-b764-d94069206d17",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AttachDetachLeftLeg",
                    "type": "Button",
                    "id": "28d38706-632d-447d-bcb4-64be1d147236",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseLeftLeg",
                    "type": "Button",
                    "id": "2b6a25dc-8d6b-4de7-a1e5-a4aa80bcc175",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AttachDetachRightLeg",
                    "type": "Button",
                    "id": "60ebeb57-b0c5-446b-bd35-40fcc557fe45",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseRightLeg",
                    "type": "Button",
                    "id": "34ad1da1-d685-4469-a668-7da0bb1388b2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6461602c-0bb1-45d5-ad67-d99fd066ac1f",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb1177bb-73f0-440b-956d-0eb6351a8ab4",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookAround",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7e1c6489-88db-4635-bb7d-c1c4fcd3058f",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttachDetachEye",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4bff647b-2812-4f61-a2cd-4a598b339a76",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseEye",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f6d9e20-7296-4803-a4f9-3b5485011140",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttachDetachLeftArm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a4d50e3-a468-4681-b3a6-210e5fc06685",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseLeftArm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "67cc9f6d-66e4-4b6e-a703-4ee9ef6fc39c",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttachDetachRightArm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7f72faf1-b400-4aa3-84bf-05ec30c5e147",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseRightArm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4c11382-a9ff-491b-b306-b79f0c9403c9",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttachDetachLeftLeg",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db121334-536e-4094-90ce-7f7f40fccdc7",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseLeftLeg",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "137158b8-0926-4794-ba42-d556975119b9",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttachDetachRightLeg",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45c89dee-7353-451c-a537-1381f29d510b",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseRightLeg",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}